src/objects/TopicAssignment_Temp__c.object
<CustomObject>
    <description>temporary object to copy and later insert topic assignment</description>
    <fields>
        <fullName>EntityId__c</fullName>
        <label>EntityId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetworkId__c</fullName>
        <label>NetworkId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopicId__c</fullName>
        <label>TopicId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>flag</label>
        <type>Checkbox</type>
    </fields>
    <label>TopicAssignment_Temp</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>TopicAssignment_Temp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TopicAssignment_Temp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>